# primorial-tree-numbers

./: .gitignore  Cargo.toml
src/: bit_array.rs  main.rs  prime_tree_num.rs  primes.rs
