[package]
name = "primorial-tree-numbers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }

[lib]
name = "bit_array"
path = "src/bit_array.rs"

[[bin]]
name = "primorial_tree_numbers"
path = "src/main.rs"
